--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "resend": "^6.3.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
