--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.5.0",
     "resend": "^6.3.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^4.0.2",
     "uuid": "^13.0.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
