--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.546.0",
     "mailer": "^0.6.7",
     "next": "16.0.0",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^7.0.10",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
