--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "16.0.0",
     "next-pwa": "^5.6.0",
     "nodemailer": "^7.0.10",
+    "qr-code-styling": "^1.9.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
