--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.546.0",
     "mailer": "^0.6.7",
     "next": "16.0.0",
+    "next-intl": "^4.5.0",
     "next-pwa": "^5.6.0",
     "nodemailer": "^7.0.10",
     "qr-code-styling": "^1.9.2",
