--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
     "@yudiel/react-qr-scanner": "^2.4.1",
+    "blobs": "^2.3.0-beta.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
