--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "resend": "^6.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
