--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
     "resend": "^6.3.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
     "uuid": "^13.0.0",
