--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
     "resend": "^6.3.0",
