--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.546.0",
     "mailer": "^0.6.7",
-    "next": "16.0.0",
+    "next": "^16.0.8",
     "next-intl": "^4.5.0",
     "next-pwa": "^5.6.0",
     "nodemailer": "^7.0.10",
