--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@epam/statgpt-ui-components": "^0.1.0-rc.0",
     "@headlessui/react": "^2.2.9",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
